// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`decoder golden file — inputs the decoder takes as a string > harvested-juicebox-encoded-braces 1`] = `
{
  "config": {
    "browsers": [
      {
        "cycle": undefined,
        "name": "HFFc6 DpnII",
        "url": "https://4dn-open-data-public.s3.amazonaws.com/fourfront-webprod/wfoutput/8f064770-6008-4f74-bfca-268d4a22d745/4DNFIMROE6N4.hic",
      },
      {
        "cycle": undefined,
        "name": "H1-hESC DpnII",
        "url": "https://4dn-open-data-public.s3.amazonaws.com/fourfront-webprod/wfoutput/a0859349-5f06-4ad3-b56f-b1166b34a9eb/4DNFIIMZB6Y9.hic",
      },
    ],
  },
  "outcome": "decodes",
}
`;

exports[`decoder golden file — inputs the decoder takes as a string > harvested-juicebox-literal-braces 1`] = `
{
  "config": {
    "browsers": [
      {
        "colorScale": ColorScale {
          "b": 0,
          "binsize": 0.07210918707440236,
          "cache": [],
          "g": 0,
          "nbins": 2000,
          "r": 255,
          "threshold": 144.21837414880474,
        },
        "cycle": undefined,
        "name": "ADAC_30.hic",
        "nvi": "7989194045,18679",
        "state": State {
          "chr1": 2,
          "chr2": 2,
          "normalization": "KR",
          "pixelSize": 1.5423280423280423,
          "x": 1896.1562537317725,
          "y": 1916.657181523778,
          "zoom": 6,
        },
        "tracks": [
          {
            "color": "rgb(255,255,0)",
            "displayMode": "COLLAPSED",
            "name": "5000_blocks",
            "url": "https://s3.amazonaws.com/hicfiles/hiseq/nSxhJZHdDRQ0kGDR/12.31.17/ADAC/inter_30_contact_domains/5000_blocks",
          },
          {
            "color": "rgb(0,36,255)",
            "displayMode": "COLLAPSED",
            "name": "merged_loops.bedpe",
            "url": "https://s3.amazonaws.com/hicfiles/hiseq/nSxhJZHdDRQ0kGDR/12.31.17/ADAC_loops/merged_loops.bedpe",
          },
          {
            "color": "rgb(0,255,36)",
            "displayMode": "COLLAPSED",
            "name": "differential_loops1.bedpe",
            "url": "https://s3.amazonaws.com/hicfiles/hiseq/nSxhJZHdDRQ0kGDR/12.31.17/ADAC_vs_EndoC/differential_loops1.bedpe",
          },
        ],
        "url": "https://s3.amazonaws.com/hicfiles/hiseq/nSxhJZHdDRQ0kGDR/12.31.17/ADAC/ADAC_30.hic",
      },
      {
        "colorScale": ColorScale {
          "b": 0,
          "binsize": 0.07138719710904917,
          "cache": [],
          "g": 0,
          "nbins": 2000,
          "r": 255,
          "threshold": 142.77439421809834,
        },
        "cycle": undefined,
        "name": "EndoC_30.hic",
        "nvi": "6818528104,18679",
        "state": State {
          "chr1": 2,
          "chr2": 2,
          "normalization": "KR",
          "pixelSize": 1.5423280423280423,
          "x": 1896.1562537317725,
          "y": 1916.657181523778,
          "zoom": 6,
        },
        "tracks": [
          {
            "color": "rgb(18,0,255)",
            "displayMode": "COLLAPSED",
            "name": "merged_loops.bedpe",
            "url": "https://s3.amazonaws.com/hicfiles/hiseq/nSxhJZHdDRQ0kGDR/12.31.17/EndoC_loops/merged_loops.bedpe",
          },
          {
            "color": "rgb(255,255,0)",
            "displayMode": "COLLAPSED",
            "name": "5000_blocks",
            "url": "https://s3.amazonaws.com/hicfiles/hiseq/nSxhJZHdDRQ0kGDR/12.31.17/EndoC/inter_30_contact_domains/5000_blocks",
          },
          {
            "color": "rgb(18,255,0)",
            "displayMode": "COLLAPSED",
            "name": "differential_loops2.bedpe",
            "url": "https://s3.amazonaws.com/hicfiles/hiseq/nSxhJZHdDRQ0kGDR/12.31.17/ADAC_vs_EndoC/differential_loops2.bedpe",
          },
        ],
        "url": "https://s3.amazonaws.com/hicfiles/hiseq/nSxhJZHdDRQ0kGDR/12.31.17/EndoC/EndoC_30.hic",
      },
    ],
  },
  "outcome": "decodes",
}
`;

exports[`decoder golden file — inputs the decoder takes as a string > harvested-juiceboxURL-bitly 1`] = `
{
  "error": {
    "message": "juiceboxURL= links are no longer supported: the bit.ly expansion was removed in #506 (ADR-0006 decision 1). Open the link in a browser to read the juicebox URL it stands for, and use that. See docs/url.md.",
    "name": "SessionDecodeError",
  },
  "outcome": "throws",
}
`;

exports[`decoder golden file — inputs the decoder takes as a string > harvested-query-4dn-control-map 1`] = `
{
  "config": {
    "controlName": "H1-hESC DpnII",
    "controlUrl": "https://4dn-open-data-public.s3.amazonaws.com/fourfront-webprod/wfoutput/a0859349-5f06-4ad3-b56f-b1166b34a9eb/4DNFIIMZB6Y9.hic",
    "cycle": undefined,
    "name": "HFFc6 DpnII",
    "url": "https://4dn-open-data-public.s3.amazonaws.com/fourfront-webprod/wfoutput/8f064770-6008-4f74-bfca-268d4a22d745/4DNFIMROE6N4.hic",
  },
  "outcome": "decodes",
}
`;

exports[`decoder golden file — inputs the decoder takes as a string > harvested-query-4dn-state-colorscale-track 1`] = `
{
  "config": {
    "colorScale": ColorScale {
      "b": 0,
      "binsize": 0.05,
      "cache": [],
      "g": 0,
      "nbins": 2000,
      "r": 255,
      "threshold": 100,
    },
    "cycle": undefined,
    "name": "HFFc6 DpnII",
    "state": State {
      "chr1": 1,
      "chr2": 1,
      "normalization": "NONE",
      "pixelSize": 1,
      "x": 0,
      "y": 0,
      "zoom": 4,
    },
    "tracks": [
      {
        "displayMode": "COLLAPSED",
        "name": "RefSeq genes",
        "url": "https://hgdownload.soe.ucsc.edu/goldenPath/hg38/database/refGene.txt.gz",
      },
    ],
    "url": "https://4dn-open-data-public.s3.amazonaws.com/fourfront-webprod/wfoutput/8f064770-6008-4f74-bfca-268d4a22d745/4DNFIMROE6N4.hic",
  },
  "outcome": "decodes",
}
`;

exports[`decoder golden file — inputs the decoder takes as a string > harvested-query-degron-fully-encoded 1`] = `
{
  "config": {
    "colorScale": ColorScale {
      "b": undefined,
      "binsize": 0.036,
      "cache": [],
      "g": undefined,
      "nbins": 2000,
      "r": undefined,
      "threshold": 72,
    },
    "cycle": undefined,
    "name": "Rao et al. | Biorxiv 2017 Combined Untreated",
    "state": State {
      "chr1": 3,
      "chr2": 3,
      "normalization": "KR",
      "pixelSize": 1.55,
      "x": 19215,
      "y": 19215,
      "zoom": 7,
    },
    "tracks": [
      {
        "color": "rgb(0,150,0)",
        "displayMode": "COLLAPSED",
        "max": 3,
        "min": 0,
        "name": "Untreated H3K36me3",
        "url": "https://s3.amazonaws.com/hicfiles/hiseq/degron/chipseq_data/untreated/H3K36me3_FE.bw",
      },
      {
        "color": "rgb(0,150,0)",
        "displayMode": "COLLAPSED",
        "max": 7,
        "min": 0,
        "name": "Untreated H3K4me1",
        "url": "https://s3.amazonaws.com/hicfiles/hiseq/degron/chipseq_data/untreated/H3K4me1_FE.bw",
      },
    ],
    "url": "https://s3.amazonaws.com/hicfiles/hiseq/degron/untreated/unsynchronized/combined.hic",
  },
  "outcome": "decodes",
}
`;

exports[`decoder golden file — inputs the decoder takes as a string > harvested-query-dnazoo-no-state 1`] = `
{
  "config": {
    "colorScale": ColorScale {
      "b": 0,
      "binsize": 9.778,
      "cache": [],
      "g": 0,
      "nbins": 2000,
      "r": 255,
      "threshold": 19556,
    },
    "cycle": undefined,
    "name": "Draft assembly",
    "nvi": "2592278165,834",
    "url": "https://dnazoo.s3.amazonaws.com/Ailurus_fulgens/ASM200746v1.hic",
  },
  "outcome": "decodes",
}
`;

exports[`decoder golden file — inputs the decoder takes as a string > harvested-query-gm12878-nvi 1`] = `
{
  "config": {
    "colorScale": ColorScale {
      "b": undefined,
      "binsize": 0.0145,
      "cache": [],
      "g": undefined,
      "nbins": 2000,
      "r": undefined,
      "threshold": 29,
    },
    "cycle": undefined,
    "name": "Rao and Huntley et al. | Cell 2014 GM12878 (human) in situ MboI HIC009 (95M)",
    "nvi": "2851728310,36479",
    "state": State {
      "chr1": 1,
      "chr2": 1,
      "normalization": "NONE",
      "pixelSize": 1,
      "x": 1115.253105,
      "y": 1149.253105,
      "zoom": 4,
    },
    "url": "https://hicfiles.s3.amazonaws.com/hiseq/gm12878/in-situ/HIC009.hic",
  },
  "outcome": "decodes",
}
`;

exports[`decoder golden file — inputs the decoder takes as a string > harvested-query-wapl-ko 1`] = `
{
  "config": {
    "colorScale": ColorScale {
      "b": undefined,
      "binsize": 0.009448099314069635,
      "cache": [],
      "g": undefined,
      "nbins": 2000,
      "r": undefined,
      "threshold": 18.89619862813927,
    },
    "cycle": undefined,
    "name": "Haarhuis et al. | Cell 2017 Hap1 knockout WAPL clone 1",
    "state": State {
      "chr1": 3,
      "chr2": 3,
      "normalization": "KR",
      "pixelSize": 1,
      "x": 5537.98746,
      "y": 5537.749239047619,
      "zoom": 6,
    },
    "tracks": [
      {
        "displayMode": "COLLAPSED",
        "name": "GM12878_CTCF_orientation.bed",
        "url": "http://hicfiles.s3.amazonaws.com/external/GM12878_CTCF_orientation.bed",
      },
      {
        "displayMode": "COLLAPSED",
        "name": "gencode.v18.collapsed.bed.gz",
        "url": "https://s3.amazonaws.com/igv.broadinstitute.org/annotations/hg19/genes/gencode.v18.collapsed.bed.gz",
      },
    ],
    "url": "https://s3.amazonaws.com/hicfiles/external/wapl_hic/WaplKO_1.14.hic",
  },
  "outcome": "decodes",
}
`;

exports[`decoder golden file — inputs the decoder takes as a string > harvested-query-wapl-wt 1`] = `
{
  "config": {
    "colorScale": ColorScale {
      "b": undefined,
      "binsize": 0.009448099314069635,
      "cache": [],
      "g": undefined,
      "nbins": 2000,
      "r": undefined,
      "threshold": 18.89619862813927,
    },
    "cycle": undefined,
    "name": "Haarhuis et al. | Cell 2017 Hap1 control",
    "state": State {
      "chr1": 3,
      "chr2": 3,
      "normalization": "KR",
      "pixelSize": 1,
      "x": 5537.98746,
      "y": 5537.749239047619,
      "zoom": 6,
    },
    "tracks": [
      {
        "displayMode": "COLLAPSED",
        "name": "GM12878_CTCF_orientation.bed",
        "url": "http://hicfiles.s3.amazonaws.com/external/GM12878_CTCF_orientation.bed",
      },
      {
        "displayMode": "COLLAPSED",
        "name": "gencode.v18.collapsed.bed.gz",
        "url": "https://s3.amazonaws.com/igv.broadinstitute.org/annotations/hg19/genes/gencode.v18.collapsed.bed.gz",
      },
    ],
    "url": "https://s3.amazonaws.com/hicfiles/external/wapl_hic/WT.hic",
  },
  "outcome": "decodes",
}
`;

exports[`decoder golden file — inputs the decoder takes as a string > harvested-session-blob-adac-endoc 1`] = `
{
  "config": {
    "browsers": [
      {
        "colorScale": "144.21837414880474,255,0,0",
        "name": "ADAC_30.hic",
        "nvi": "7989194045,18679",
        "state": "2,2,6,1896.1562537317725,1916.657181523778,1.5423280423280423,KR",
        "tracks": [
          {
            "color": "rgb(255,255,0)",
            "displayMode": "COLLAPSED",
            "name": "5000_blocks",
            "url": "https://s3.amazonaws.com/hicfiles/hiseq/nSxhJZHdDRQ0kGDR/12.31.17/ADAC/inter_30_contact_domains/5000_blocks",
          },
          {
            "color": "rgb(0,36,255)",
            "displayMode": "COLLAPSED",
            "name": "merged_loops.bedpe",
            "url": "https://s3.amazonaws.com/hicfiles/hiseq/nSxhJZHdDRQ0kGDR/12.31.17/ADAC_loops/merged_loops.bedpe",
          },
          {
            "color": "rgb(0,255,36)",
            "displayMode": "COLLAPSED",
            "name": "differential_loops1.bedpe",
            "url": "https://s3.amazonaws.com/hicfiles/hiseq/nSxhJZHdDRQ0kGDR/12.31.17/ADAC_vs_EndoC/differential_loops1.bedpe",
          },
        ],
        "url": "https://s3.amazonaws.com/hicfiles/hiseq/nSxhJZHdDRQ0kGDR/12.31.17/ADAC/ADAC_30.hic",
      },
      {
        "colorScale": "142.77439421809834,255,0,0",
        "name": "EndoC_30.hic",
        "nvi": "6818528104,18679",
        "state": "2,2,6,1896.1562537317725,1916.657181523778,1.5423280423280423,KR",
        "tracks": [
          {
            "color": "rgb(18,0,255)",
            "displayMode": "COLLAPSED",
            "name": "merged_loops.bedpe",
            "url": "https://s3.amazonaws.com/hicfiles/hiseq/nSxhJZHdDRQ0kGDR/12.31.17/EndoC_loops/merged_loops.bedpe",
          },
          {
            "color": "rgb(255,255,0)",
            "displayMode": "COLLAPSED",
            "name": "5000_blocks",
            "url": "https://s3.amazonaws.com/hicfiles/hiseq/nSxhJZHdDRQ0kGDR/12.31.17/EndoC/inter_30_contact_domains/5000_blocks",
          },
          {
            "color": "rgb(18,255,0)",
            "displayMode": "COLLAPSED",
            "name": "differential_loops2.bedpe",
            "url": "https://s3.amazonaws.com/hicfiles/hiseq/nSxhJZHdDRQ0kGDR/12.31.17/ADAC_vs_EndoC/differential_loops2.bedpe",
          },
        ],
        "url": "https://s3.amazonaws.com/hicfiles/hiseq/nSxhJZHdDRQ0kGDR/12.31.17/EndoC/EndoC_30.hic",
      },
    ],
  },
  "outcome": "decodes",
}
`;

exports[`decoder golden file — inputs the decoder takes as a string > reject-query-empty 1`] = `
{
  "outcome": "no-config",
}
`;

exports[`decoder golden file — inputs the decoder takes as a string > reject-query-no-recognized-parameters 1`] = `
{
  "outcome": "no-config",
}
`;

exports[`decoder golden file — inputs the decoder takes as a string > reject-query-selected-gene-alone 1`] = `
{
  "outcome": "no-config",
}
`;

exports[`decoder golden file — inputs the decoder takes as a string > reject-session-blob-corrupt 1`] = `
{
  "error": {
    "message": undefined,
    "name": undefined,
    "thrown": "string: invalid block type",
  },
  "outcome": "throws",
}
`;

exports[`decoder golden file — inputs the decoder takes as a string > reject-session-gzip-data-uri 1`] = `
{
  "error": {
    "message": undefined,
    "name": undefined,
    "thrown": "string: invalid distance too far back",
  },
  "outcome": "throws",
}
`;

exports[`decoder golden file — inputs the decoder takes as a string > synth-juicebox-browser-carrying-selected-gene 1`] = `
{
  "config": {
    "browsers": [
      {
        "cycle": undefined,
        "name": "A",
        "selectedGene": "MYC",
        "url": "https://example.org/a.hic",
      },
      {
        "cycle": undefined,
        "name": "B",
        "selectedGene": "ACE",
        "url": "https://example.org/b.hic",
      },
    ],
    "selectedGene": "ACE",
  },
  "outcome": "decodes",
}
`;

exports[`decoder golden file — inputs the decoder takes as a string > synth-juiceboxData-compressed 1`] = `
{
  "config": {
    "browsers": [
      {
        "cycle": undefined,
        "name": "HFFc6 DpnII",
        "url": "https://4dn-open-data-public.s3.amazonaws.com/fourfront-webprod/wfoutput/8f064770-6008-4f74-bfca-268d4a22d745/4DNFIMROE6N4.hic",
      },
      {
        "cycle": undefined,
        "name": "H1-hESC DpnII",
        "url": "https://4dn-open-data-public.s3.amazonaws.com/fourfront-webprod/wfoutput/a0859349-5f06-4ad3-b56f-b1166b34a9eb/4DNFIIMZB6Y9.hic",
      },
    ],
  },
  "outcome": "decodes",
}
`;

exports[`decoder golden file — inputs the decoder takes as a string > synth-query-colorscale-bare-threshold 1`] = `
{
  "config": {
    "colorScale": ColorScale {
      "b": undefined,
      "binsize": 0.009448099314069635,
      "cache": [],
      "g": undefined,
      "nbins": 2000,
      "r": undefined,
      "threshold": 18.89619862813927,
    },
    "cycle": undefined,
    "url": "https://example.org/a.hic",
  },
  "outcome": "decodes",
}
`;

exports[`decoder golden file — inputs the decoder takes as a string > synth-query-colorscale-diff 1`] = `
{
  "config": {
    "colorScale": DiffColorScale {
      "negativeScale": ColorScale {
        "b": 255,
        "binsize": 0.0025,
        "cache": [],
        "g": 0,
        "nbins": 2000,
        "r": 0,
        "threshold": 5,
      },
      "positiveScale": ColorScale {
        "b": 0,
        "binsize": 0.0025,
        "cache": [],
        "g": 0,
        "nbins": 2000,
        "r": 255,
        "threshold": 5,
      },
      "threshold": 2,
    },
    "controlUrl": "https://example.org/b.hic",
    "cycle": undefined,
    "displayMode": "AMB",
    "url": "https://example.org/a.hic",
  },
  "outcome": "decodes",
}
`;

exports[`decoder golden file — inputs the decoder takes as a string > synth-query-colorscale-four-token 1`] = `
{
  "config": {
    "colorScale": ColorScale {
      "b": 0,
      "binsize": 0.05,
      "cache": [],
      "g": 0,
      "nbins": 2000,
      "r": 255,
      "threshold": 100,
    },
    "cycle": undefined,
    "url": "https://example.org/a.hic",
  },
  "outcome": "decodes",
}
`;

exports[`decoder golden file — inputs the decoder takes as a string > synth-query-colorscale-ratio 1`] = `
{
  "config": {
    "colorScale": RatioColorScale {
      "negativeScale": ColorScale {
        "b": 255,
        "binsize": 0.0025,
        "cache": [],
        "g": 0,
        "nbins": 2000,
        "r": 0,
        "threshold": 5,
      },
      "positiveScale": ColorScale {
        "b": 0,
        "binsize": 0.0025,
        "cache": [],
        "g": 0,
        "nbins": 2000,
        "r": 255,
        "threshold": 5,
      },
      "threshold": 2,
    },
    "controlUrl": "https://example.org/b.hic",
    "cycle": undefined,
    "displayMode": "AOB",
    "url": "https://example.org/a.hic",
  },
  "outcome": "decodes",
}
`;

exports[`decoder golden file — inputs the decoder takes as a string > synth-query-every-parameter 1`] = `
{
  "config": {
    "colorScale": ColorScale {
      "b": 0,
      "binsize": 0.05,
      "cache": [],
      "g": 0,
      "nbins": 2000,
      "r": 255,
      "threshold": 100,
    },
    "controlName": "B",
    "controlNvi": "789,10",
    "controlUrl": "https://example.org/b.hic",
    "cycle": "true",
    "displayMode": "AOB",
    "name": "A",
    "nvi": "123,456",
    "selectedGene": "MYC",
    "state": State {
      "chr1": 1,
      "chr2": 1,
      "normalization": "KR",
      "pixelSize": 1,
      "x": 0,
      "y": 0,
      "zoom": 4,
    },
    "tracks": [
      {
        "color": "rgb(255,0,0)",
        "displayMode": "COLLAPSED",
        "max": 50,
        "min": 0,
        "name": "A",
        "url": "https://example.org/a.bed",
      },
    ],
    "url": "https://example.org/a.hic",
  },
  "outcome": "decodes",
}
`;

exports[`decoder golden file — inputs the decoder takes as a string > synth-query-state-too-few-tokens 1`] = `
{
  "config": {
    "cycle": undefined,
    "state": State {
      "chr1": 1,
      "chr2": 2,
      "normalization": "NONE",
      "pixelSize": 1,
      "x": NaN,
      "y": NaN,
      "zoom": NaN,
    },
    "url": "https://example.org/a.hic",
  },
  "outcome": "decodes",
}
`;

exports[`decoder golden file — inputs the decoder takes as a string > synth-query-state-transposed 1`] = `
{
  "config": {
    "cycle": undefined,
    "state": State {
      "chr1": 3,
      "chr2": 5,
      "normalization": "KR",
      "pixelSize": 2,
      "x": 200,
      "y": 100,
      "zoom": 6,
    },
    "url": "https://example.org/a.hic",
  },
  "outcome": "decodes",
}
`;

exports[`decoder golden file — inputs the decoder takes as a string > synth-query-state-v0-six-token 1`] = `
{
  "config": {
    "cycle": undefined,
    "state": State {
      "chr1": 1,
      "chr2": 2,
      "normalization": "NONE",
      "pixelSize": 3,
      "x": 10,
      "y": 20,
      "zoom": 4,
    },
    "url": "https://example.org/a.hic",
  },
  "outcome": "decodes",
}
`;

exports[`decoder golden file — inputs the decoder takes as a string > synth-query-state-v1-eight-token 1`] = `
{
  "config": {
    "cycle": undefined,
    "state": State {
      "chr1": 3,
      "chr2": 5,
      "normalization": "NONE",
      "pixelSize": 2,
      "x": 100,
      "y": 200,
      "zoom": 6,
    },
    "url": "https://example.org/a.hic",
  },
  "outcome": "decodes",
}
`;

exports[`decoder golden file — inputs the decoder takes as a string > synth-query-state-v1-legacy-viewport 1`] = `
{
  "config": {
    "cycle": undefined,
    "state": State {
      "chr1": 3,
      "chr2": 5,
      "normalization": "KR",
      "pixelSize": 2,
      "x": 100,
      "y": 200,
      "zoom": 6,
    },
    "url": "https://example.org/a.hic",
  },
  "outcome": "decodes",
}
`;

exports[`decoder golden file — inputs the decoder takes as a string > synth-query-state-v1-nine-token 1`] = `
{
  "config": {
    "cycle": undefined,
    "state": State {
      "chr1": 3,
      "chr2": 5,
      "normalization": "KR",
      "pixelSize": 2,
      "x": 100,
      "y": 200,
      "zoom": 6,
    },
    "url": "https://example.org/a.hic",
  },
  "outcome": "decodes",
}
`;

exports[`decoder golden file — inputs the decoder takes as a string > synth-query-tracks-bare-url 1`] = `
{
  "config": {
    "cycle": undefined,
    "tracks": [
      {
        "color": "https://example.org/a.bed",
        "displayMode": "COLLAPSED",
        "url": "https://example.org/a.bed",
      },
    ],
    "url": "https://example.org/a.hic",
  },
  "outcome": "decodes",
}
`;

exports[`decoder golden file — inputs the decoder takes as a string > synth-query-tracks-default-color-stripped 1`] = `
{
  "config": {
    "cycle": undefined,
    "tracks": [
      {
        "displayMode": "COLLAPSED",
        "max": 50,
        "min": 0,
        "name": "A",
        "url": "https://example.org/a.bed",
      },
    ],
    "url": "https://example.org/a.hic",
  },
  "outcome": "decodes",
}
`;

exports[`decoder golden file — inputs the decoder takes as a string > synth-query-tracks-empty-range 1`] = `
{
  "config": {
    "cycle": undefined,
    "tracks": [
      {
        "color": "rgb(255,0,0)",
        "displayMode": "COLLAPSED",
        "name": "A",
        "url": "https://example.org/a.bed",
      },
    ],
    "url": "https://example.org/a.hic",
  },
  "outcome": "decodes",
}
`;

exports[`decoder golden file — inputs the decoder takes as a string > synth-query-tracks-four-field 1`] = `
{
  "config": {
    "cycle": undefined,
    "tracks": [
      {
        "color": "rgb(255,0,0)",
        "displayMode": "COLLAPSED",
        "max": 50,
        "min": 0,
        "name": "A",
        "url": "https://example.org/a.bed",
      },
    ],
    "url": "https://example.org/a.hic",
  },
  "outcome": "decodes",
}
`;

exports[`decoder golden file — inputs the decoder takes as a string > synth-query-tracks-name-with-bar 1`] = `
{
  "config": {
    "cycle": undefined,
    "tracks": [
      {
        "color": "rgb(255,0,0)",
        "displayMode": "COLLAPSED",
        "max": 50,
        "min": 0,
        "name": "A|B",
        "url": "https://example.org/a.bed",
      },
    ],
    "url": "https://example.org/a.hic",
  },
  "outcome": "decodes",
}
`;

exports[`decoder golden file — inputs the decoder takes as a string > synth-query-tracks-negative-range 1`] = `
{
  "config": {
    "cycle": undefined,
    "tracks": [
      {
        "color": "rgb(255,0,0)",
        "displayMode": "COLLAPSED",
        "max": 5,
        "min": -5,
        "name": "A",
        "url": "https://example.org/a.bed",
      },
    ],
    "url": "https://example.org/a.hic",
  },
  "outcome": "decodes",
}
`;

exports[`decoder golden file — inputs the decoder takes as a string > synth-query-tracks-three-field 1`] = `
{
  "config": {
    "cycle": undefined,
    "tracks": [
      {
        "color": "rgb(255,0,0)",
        "displayMode": "COLLAPSED",
        "name": "A",
        "url": "https://example.org/a.bed",
      },
    ],
    "url": "https://example.org/a.hic",
  },
  "outcome": "decodes",
}
`;

exports[`decoder golden file — inputs the decoder takes as a string > synth-query-tracks-two-field 1`] = `
{
  "config": {
    "cycle": undefined,
    "tracks": [
      {
        "color": "rgb(255,0,0)",
        "displayMode": "COLLAPSED",
        "url": "https://example.org/a.bed|rgb(255,0,0)",
      },
    ],
    "url": "https://example.org/a.hic",
  },
  "outcome": "decodes",
}
`;

exports[`decoder golden file — inputs the decoder takes as a string > synth-query-tracks-undefined-url 1`] = `
{
  "config": {
    "cycle": undefined,
    "tracks": [],
    "url": "https://example.org/a.hic",
  },
  "outcome": "decodes",
}
`;

exports[`decoder golden file — inputs the decoder takes as a string > synth-query-url-shortcuts-http 1`] = `
{
  "config": {
    "controlUrl": "http://hicfiles.s3.amazonaws.com/external/b.hic",
    "cycle": undefined,
    "url": "http://hicfiles.s3.amazonaws.com/hiseq/a.hic",
  },
  "outcome": "decodes",
}
`;

exports[`decoder golden file — inputs the decoder takes as a string > synth-query-url-shortcuts-https 1`] = `
{
  "config": {
    "controlUrl": "https://www.encodeproject.org/files/ENCFF000.hic",
    "cycle": undefined,
    "tracks": [
      {
        "color": "rgb(255,0,0)",
        "displayMode": "COLLAPSED",
        "max": 50,
        "min": 0,
        "name": "B",
        "url": "https://hicfiles.s3.amazonaws.com/external/b.bed",
      },
    ],
    "url": "https://hicfiles.s3.amazonaws.com/hiseq/a.hic",
  },
  "outcome": "decodes",
}
`;

exports[`decoder golden file — inputs the decoder takes as a string > synth-session-and-hic-url-together 1`] = `
{
  "config": {
    "cycle": undefined,
    "url": "https://example.org/wins.hic",
  },
  "outcome": "decodes",
}
`;

exports[`decoder golden file — inputs the decoder takes as a string > synth-session-data-prefix 1`] = `
{
  "config": {
    "browsers": [
      {
        "colorScale": "100,255,0,0",
        "name": "HFFc6 DpnII",
        "state": {
          "chr1": 1,
          "chr2": 1,
          "normalization": "NONE",
          "pixelSize": 1,
          "x": 0,
          "y": 0,
          "zoom": 4,
        },
        "tracks": [],
        "url": "https://4dn-open-data-public.s3.amazonaws.com/fourfront-webprod/wfoutput/8f064770-6008-4f74-bfca-268d4a22d745/4DNFIMROE6N4.hic",
      },
    ],
  },
  "outcome": "decodes",
}
`;

exports[`decoder golden file — inputs the decoder takes as a string > synth-session-with-selected-gene 1`] = `
{
  "config": {
    "browsers": [
      {
        "colorScale": "100,255,0,0",
        "name": "HFFc6 DpnII",
        "state": {
          "chr1": 1,
          "chr2": 1,
          "normalization": "NONE",
          "pixelSize": 1,
          "x": 0,
          "y": 0,
          "zoom": 4,
        },
        "tracks": [],
        "url": "https://4dn-open-data-public.s3.amazonaws.com/fourfront-webprod/wfoutput/8f064770-6008-4f74-bfca-268d4a22d745/4DNFIMROE6N4.hic",
      },
    ],
    "selectedGene": "MYC",
  },
  "outcome": "decodes",
}
`;

exports[`decoder golden file — session URLs, driven from their loader response > reject-session-url-invalid-json 1`] = `
{
  "error": {
    "message": "Failed to load session from URL/file: Failed to parse session from URL/file: Unexpected token '<', "<!doctype "... is not valid JSON",
    "name": "Error",
  },
  "outcome": "throws",
}
`;

exports[`decoder golden file — session URLs, driven from their loader response > reject-session-url-unreachable 1`] = `
{
  "error": {
    "message": "Failed to load session from URL/file: simulated fetch failure",
    "name": "Error",
  },
  "outcome": "throws",
}
`;

exports[`decoder golden file — session URLs, driven from their loader response > synth-session-url-blob-prefixed 1`] = `
{
  "config": {
    "browsers": [
      {
        "colorScale": "100,255,0,0",
        "name": "HFFc6 DpnII",
        "state": {
          "chr1": 1,
          "chr2": 1,
          "normalization": "NONE",
          "pixelSize": 1,
          "x": 0,
          "y": 0,
          "zoom": 4,
        },
        "tracks": [],
        "url": "https://4dn-open-data-public.s3.amazonaws.com/fourfront-webprod/wfoutput/8f064770-6008-4f74-bfca-268d4a22d745/4DNFIMROE6N4.hic",
      },
    ],
  },
  "outcome": "decodes",
}
`;

exports[`decoder golden file — session URLs, driven from their loader response > synth-session-url-plain-json 1`] = `
{
  "config": {
    "browsers": [
      {
        "name": "A",
        "state": {
          "chr1": 1,
          "chr2": 1,
          "normalization": "NONE",
          "pixelSize": 1,
          "x": 0,
          "y": 0,
          "zoom": 4,
        },
        "url": "https://example.org/a.hic",
      },
    ],
  },
  "outcome": "decodes",
}
`;

exports[`decoder golden file — state strings > state-truncated 1`] = `
State {
  "chr1": 1,
  "chr2": 2,
  "normalization": "NONE",
  "pixelSize": 1,
  "x": NaN,
  "y": NaN,
  "zoom": NaN,
}
`;

exports[`decoder golden file — state strings > state-v0-seven-token 1`] = `
State {
  "chr1": 3,
  "chr2": 3,
  "normalization": "KR",
  "pixelSize": 1,
  "x": 5537.98746,
  "y": 5537.749239047619,
  "zoom": 6,
}
`;

exports[`decoder golden file — state strings > state-v0-seven-token-encoded-origin 1`] = `
State {
  "chr1": 3,
  "chr2": 3,
  "normalization": "KR",
  "pixelSize": 1.55,
  "x": 19215,
  "y": 19215,
  "zoom": 7,
}
`;

exports[`decoder golden file — state strings > state-v0-six-token-no-normalization 1`] = `
State {
  "chr1": 1,
  "chr2": 2,
  "normalization": "NONE",
  "pixelSize": 3,
  "x": 10,
  "y": 20,
  "zoom": 4,
}
`;

exports[`decoder golden file — state strings > state-v0-transposed-pair 1`] = `
State {
  "chr1": 3,
  "chr2": 5,
  "normalization": "KR",
  "pixelSize": 2,
  "x": 200,
  "y": 100,
  "zoom": 6,
}
`;

exports[`decoder golden file — state strings > state-v1-eight-token-no-normalization 1`] = `
State {
  "chr1": 3,
  "chr2": 5,
  "normalization": "NONE",
  "pixelSize": 2,
  "x": 100,
  "y": 200,
  "zoom": 6,
}
`;

exports[`decoder golden file — state strings > state-v1-nine-token 1`] = `
State {
  "chr1": 3,
  "chr2": 5,
  "normalization": "KR",
  "pixelSize": 2,
  "x": 100,
  "y": 200,
  "zoom": 6,
}
`;

exports[`decoder golden file — state strings > state-v1-nine-token-legacy-viewport 1`] = `
State {
  "chr1": 3,
  "chr2": 5,
  "normalization": "KR",
  "pixelSize": 2,
  "x": 100,
  "y": 200,
  "zoom": 6,
}
`;

exports[`decoder golden file — state strings > state-v1-transposed-pair 1`] = `
State {
  "chr1": 3,
  "chr2": 5,
  "normalization": "KR",
  "pixelSize": 2,
  "x": 200,
  "y": 100,
  "zoom": 6,
}
`;

exports[`decoder golden file — the File arm is not reachable > reject-session-file-invalid-json 1`] = `
{
  "error": {
    "message": "uri.indexOf is not a function",
    "name": "TypeError",
  },
  "outcome": "throws",
}
`;

exports[`decoder golden file — the File arm is not reachable > synth-session-file-blob-prefixed 1`] = `
{
  "error": {
    "message": "uri.indexOf is not a function",
    "name": "TypeError",
  },
  "outcome": "throws",
}
`;

exports[`decoder golden file — the File arm is not reachable > synth-session-file-plain-json 1`] = `
{
  "error": {
    "message": "uri.indexOf is not a function",
    "name": "TypeError",
  },
  "outcome": "throws",
}
`;
